# mySampleCode

./: README.md  gsl.tgz
Address-Sanitizer/: Makefile  asan  asan.c  asani_arm
JNI_sample/: JNIFoo.h  JNIFoo.java  Makefile  foo.c
JNI_sample_IBM/: Makefile  Sample1.c  Sample1.cpp  Sample1.java  Sample2  Sample2.c  Sample2.cpp  Sample2.java
LDD3_EXAMPLE/: Makefile
LD_PRELOAD/: Makefile  liba.c  liba.h  mymalloc.c  preload_test.sh  test  test.c  wrap-preload.c
Lua_examples/: quickluatour.lua
anage-C-Data-Using-the-GLib-Collections-example/: ex-compile.c  ex-garray-1.c  ex-garray-2.c  ex-garray-3.c  ex-garray-4.c  ex-garray-5.c  ex-garray-6.c  ex-garray-7.c  ex-garray-8.c  ex-ghashtable-1.c  ex-ghashtable-2.c  ex-ghashtable-3.c  ex-ghashtable-4.c  ex-ghashtable-5.c  ex-ghashtable-6.c  ex-ghashtable-7.c  ex-glist-1.c  ex-glist-2.c  ex-glist-3.c  ex-glist-4.c  ex-gqueue-1.c  ex-gqueue-2.c  ex-gqueue-3.c  ex-gqueue-4.c  ex-gqueue-5.c  ex-gqueue-6.c  ex-grelation-1.c  ex-grelation-2.c  ex-gslist-1.c  ex-gslist-10.c  ex-gslist-11.c  ex-gslist-2.c  ex-gslist-3.c  ex-gslist-4.c  ex-gslist-5.c  ex-gslist-6.c  ex-gslist-7.c  ex-gslist-8.c  ex-gslist-9.c  ex-gtree-1.c  (+5 more)
autotool-sample/: autotool-sample.tgz  autotoolsdemo.tgz
backtrace/: Makefile  backtrace_symbols  backtrace_symbols.c  bfd_backtrace.c  buitin_frame  buitin_frame.c  core  dladdr_backtrace  dladdr_backtrace.c  libunwind_backtrace  libunwind_backtrace.c  libunwind_backtrace_arm
basic_c_test/: PointArray.c  ReverseStr.c  ReverseStr2.c  array.c  array_ptr.c  asm_test.c  bigendian.c  bigendian2.c  bit_operation.c  bitset.c  checksum.c  class.cpp  class2.cpp  class3.cpp  class4.cpp  class5.cpp  class6.cpp  class7.cpp  class8.cpp  code1.c  code2.c  define_test.c  div_3-example-1.c  div_3-example-2.c  divbybit.c  dyntick-test.c  enumswitch.c  float.c  init_data.c  link_list.c  message.c  nest_function.c  netlink_udev.c  pthread_1.c  pthread_2.c  shift.c  siwtch_test.c  size.c  static_test.c  strcat.c  (+4 more)
binary2hex_header/: Makefile  bin2hexheader  bin2hexheader.c  hello  hello.c  hello_bin2  hello_header.h  hexheader2bin.c
c_code_template/: Makefile.tmp  Makefile_multi_compile.tmp  color_text.c  define_##.c  define_test  dlopen_demo.c  env.c  errno.h  longopt.c  macro_fn.c  mem_info.c  modify_update.c  opt.c  select.c  signal.c  signalmask.c  syscall.c  ttytest.c  types.h  u32test.c  volatile_test.c
capability_daemon/: cap_admin.c  pthread_capability_test.c  pthread_schedule_test.c
code_test/: Makefile  adjtime_test.c  backtrace.c  bash_replace.sh  builtin_offsetof.c  busy.c  c_hook  c_hook.c  circle_queue  circle_queue.c  color_text  color_text.c  complex.c  context  context.c  cpp_demangle  cpp_demangle.cpp  deprecate.c  deprecate_test  dlopen_demo  epoll  epoll.c  exception.c  exploit_notesearch.c  fifo_client  fifo_client.c  fifo_server  fifo_server.c  float.s  fun_malloc  fun_malloc.c  glib_xml_parser.c  gthread_test_m86.c  hello.c  hz_loop  hz_loop.c  ident.c  libxml2_parser.c  load40.sh  locales.xml  (+80 more)
dladdr_example/: Makefile  dl_test  dl_test.c
elf_link_map/: Makefile  elf_link_map  elf_link_map.c
execute_hexcode/: Makefile  execute_hexcode  execute_hexcode.c  hello_header.h  hexheader2bin
function_trace/: trace_function.c
gen_mapfile/: Makefile  mapfile.c
llvm-cross-compile/cmake-example/: CMakeLists.txt  build-llvm-external-toolchain.sh  build-llvm-multilib.sh  example.cpp  linux-arm-llvm.cmake
macro_define/: Makefile  gpio.c  hello.c
makefile_template/: Makefile
memory_leak_check/: dmalloc-5.5.2.tgz  dmalloc_test  efence_test.c  electric-fence_2.2.4.dsc  leak.c  memprof-0.6.2.tar.bz2  mpatrol-1.5.1-arm.patch  mpatrol-1.5.1-cxx.patch  mpatrol-1.5.1-define_pkg_version.patch  mpatrol-1.5.1-libunwind_flags.patch
memory_leak_check/memprof-0.6.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  leak.xpm  memprof.desktop  memprof.glade  memprof.spec  memprof.spec.in
memory_leak_check/memprof-0.6.2/lib/: intercept.c  intercept.h  memintercept-utils.c  memintercept-utils.h  memintercept.c  memintercept.h  mi-perfctr.c  mi-perfctr.h  perfctr.h  speedintercept.c  stack-frame.c  stack-frame.h
memory_leak_check/memprof-0.6.2/po/: ChangeLog  POTFILES.in  am.po  ar.po  az.po  be.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  hr.po  hu.po  it.po  ja.po  ko.po  lv.po  mk.po  ml.po  ms.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  sk.po  sl.po  (+9 more)
memory_leak_check/memprof-0.6.2/src/: binfile.c  binfile.h  detailwin.c  elfparser.c  gui.h  leakdetect.c  leakdetect.h  main.c  memprof.h  process.c  process.h  profile.c  profile.h  server.c  server.h  stackstash.c  stackstash.h  tree.c  treeviewutils.c  treeviewutils.h
memory_leak_check/memprof-0.6.2/tests/: testmemprof.c
memory_leak_check/mpatrol/config/: acconfig.h  bin.am  bin.in  configure  configure.h.in  configure.in  doc.am  doc.in  extra.am  extra.in  images.am  images.in  man.am  man.in  src.am  src.in  tools.am  tools.in  top.am  top.in  tsrc.am  tsrc.in
minigdb/: Makefile  addr_maps.c  arm_ptrace  arm_ptrace.c  breakpoint.c  callstack.c  debug_file.c  debug_line.c  libunwind_remote  libunwind_remote.c  memleax.c  minigdb  minigdb.c  proc_info.c  ptr_backtrace.c  symtab.c  tags  target.c  test  test.c  trace_pid  trace_pid.c
overflow-detector/: Makefile  main.c
process_on_fixed_CPU/: Makefile  busyloop.c  process_on_fixed_CPU.c  pthread_on_fixed_CPU.c
pthread_sample/: irq_proc.c  irq_proc.h  time_meansure.c
python/: road_traffic.py
rs232_demo_code/: 7030 SDebug and Tuning tool Guide.doc  Makefile  sdebug.c  sdebug_api.c  sdebug_api.h  uiomem3.c
share_memory/: Makefile  testapp  testapp.c
share_obj/: Makefile  foo.h  main.c
travsal_dir_tree/: Makefile  editor.c  ftw_test  ftw_test.c  laster8.C  logo.C  test  test.c
unix_socket/: Makefile  unix_socket_cli  unix_socket_cli.c  unix_socket_cli_mips  unix_socket_svr  unix_socket_svr.c  unix_socket_svr_mips  (+2 more)
(+3028 files in other folders)
