CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0 FATAL_ERROR)
SET(CMAKE_CXX_STANDARD 17) # yaml-cpp requires at least C++11; C++17 is current
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
PROJECT(example-project CXX)
INCLUDE_DIRECTORIES(${YAML_CPP_INCLUDE_DIR})
ADD_EXECUTABLE(example example.cpp)
TARGET_LINK_LIBRARIES(example ${YAML_CPP_LIBRARIES})
