dnl mpatrol
dnl A library for controlling and tracing dynamic memory allocations.
dnl Copyright (C) 1997-2008 Graeme S. Roy <graemeroy@users.sourceforge.net>
dnl
dnl This program is free software: you can redistribute it and/or modify it
dnl under the terms of the GNU Lesser General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or (at
dnl your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU Lesser General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.


dnl Process this file with autoconf to produce a configure script


dnl $Id$


dnl Initialisation.

AC_REVISION($Revision: 1.16 $)
AC_INIT(src/mpatrol.h)
AM_CONFIG_HEADER(configure.h)
AM_INIT_AUTOMAKE(mpatrol, 1.5.1)


dnl Checks for programs.

AC_PROG_CC
AM_PROG_LIBTOOL


dnl Checks for libraries.


dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_TYPE(ptrdiff_t, long)
AC_CHECK_SIZEOF(void *, 4)


dnl Checks for library functions.

AC_FUNC_MMAP
AC_FUNC_SETVBUF_REVERSED
AC_CHECK_FUNCS(memalign mincore)


dnl Checks for system services.

AC_CYGWIN
AC_EXEEXT
AC_OBJEXT
AC_PATH_XTRA
AM_CONDITIONAL(XSUPPORT, test x$no_x != xyes)


dnl Finalisation.

AC_OUTPUT(Makefile
          bin/Makefile
          doc/Makefile
          doc/images/Makefile
          extra/Makefile
          man/Makefile
          src/Makefile
          tsrc/Makefile
          tools/Makefile)
